# tractjs

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  README.md  build.sh  build_website.sh  custom-model.html  deploy.sh  index.html  squeezenet.html  trees.html
.github/workflows/: deploy.yml  gh-pages.yml  test.yml
css/: app.0d863ee2.css  chunk-vendors.17217298.css  chunk-vendors.a8af4aba.css  custom_model.2ff1581e.css  custom_model.30b28476.css  custom_model.34ffa3eb.css  custom_model.7e4d91fc.css  custom_model~squeezenet.b52bbd9f.css  custom_model~squeezenet.b95d4230.css  custom_model~squeezenet.d79516b4.css  custom_model~squeezenet~trees.e62c876e.css  squeezenet.0f23efcc.css  squeezenet.aed74564.css  squeezenet.ebdeeecc.css  trees.f8d9f25f.css
demos/: NOTES.md  bootstrap.js  deploy.sh  index.html  index.js  package-lock.json  package.json  vue.config.js  webpack.config.js
demos/public/: index.html
demos/src/: App.vue  main.js
dev_server/: bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
docs/: globals.html  index.html
docs/classes/: model.html  tensor.html
js/: app.0cabde91.js  app.0cabde91.js.map  app.10e8a976.js  app.10e8a976.js.map  app.14a51d8e.js  app.14a51d8e.js.map  app.19342b5e.js  app.19342b5e.js.map  app.29771732.js  app.29771732.js.map  app.314c5087.js  app.314c5087.js.map  app.3554f90c.js  app.3554f90c.js.map  app.3a4ce14e.js  app.3a4ce14e.js.map  app.4c3d7720.js  app.4c3d7720.js.map  app.50c2e857.js  app.50c2e857.js.map  app.593fcb08.js  app.593fcb08.js.map  app.5b3602c7.js  app.5b3602c7.js.map  app.63683747.js  app.63683747.js.map  app.692ee87d.js  app.692ee87d.js.map  app.74c15e3d.js  app.74c15e3d.js.map  app.79b1c17d.js  app.79b1c17d.js.map  app.8e594087.js  app.8e594087.js.map  app.a026cfcd.js  app.a026cfcd.js.map  app.a302ba9d.js  app.a302ba9d.js.map  app.aaad8489.js  app.aaad8489.js.map  (+56 more)
quality/benches/: bench.js  benches.json  index.html  package-lock.json  package.json  webpack.config.js
quality/models/: download_models.sh  download_squeezenet_1_1.py  requirements.txt
quality/tests/: index.html  inputs.json  outputs.json  reference.rs  (+1 more)
src/: lib.rs
trees/: model.onnx
wrapper/: .eslintignore  .eslintrc  .gitignore  cypress.json  jest.config.js  package-lock.json  package.json  rollup.config.js  rollup.js  tsconfig.json  webpack.config.js
(+29 files in other folders)
