[package]
name = "tractjs-core"
version = "0.1.0"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
js-sys = "0.3.39"
tract-onnx = "0.6.3"
tract-tensorflow = "0.6.3"
console_error_panic_hook = "0.1.1"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Response',
  'Window',
]

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true