[package]
name = "tractjs-core"
version = "0.1.0"
authors = ["Benjamin Minixhofer <bminixhofer@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "^0.2"
js-sys = "0.3.39"
tract-core = "0.9.1"
tract-onnx = "0.9.1"
tract-hir = "0.9.1"
tract-tensorflow = "0.9.1"
console_error_panic_hook = "0.1.1"
ndarray-rand = { version = "0.11.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["reference"]
reference = ["serde", "serde_json", "ndarray-rand"]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Response',
  'Window',
]

[profile.release]
opt-level = 's'
codegen-units = 1
lto = true

[[bin]]
name = "test_reference"
path = "quality/tests/reference.rs"
required-features = ["reference"]